fixed contact drop-down menu and fixed responsiveness, no horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -148,16 +148,23 @@ footer {
 }
 
 .women-body {
-    margin: 60px;
+    width: 100%;
 }
 
 .men-body {
     margin: 60px;
 }
 
+.w-fit-content{
+    width: fit-content;
+}
+
 #rectangle-clothing {
-    width: 400px;
+    width: 100%;
     margin: 40px;
+}
+#inverted-clothing {
+    width: 100%;
 }
 
 #header {
@@ -181,5 +188,11 @@ footer {
 
     .form {
         width: 100%;
+    }
+}
+
+@media(min-width: 576px){
+    .women-body {
+        margin: 60px;
     }
 }
